--- a/index.html
+++ b/index.html
@@ -19,53 +19,54 @@
       <!-- <p>Once spotted, click on it!</p> -->
     </header>
     <main>
+      <!-- When game is implemented, id will be used -->
       <div id="columna">
-        <div id="a1"></div>
-        <div id="a2"></div>
-        <div id="a3"></div>
-        <div id="a4"></div>
-        <div id="a5"></div>
-        <div id="a6"></div>
+        <div id="a1" class="red"></div>
+        <div id="a2" class="red"></div>
+        <div id="a3" class="red"></div>
+        <div id="a4" class="red"></div>
+        <div id="a5" class="red"></div>
+        <div id="a6" class="red"></div>
       </div>
       <div id="columnb">
-        <div id="b1"></div>
-        <div id="b2"></div>
-        <div id="b3"></div>
-        <div id="b4"></div>
-        <div id="b5"></div>
-        <div id="b6"></div>
+        <div id="b1" class="orange"></div>
+        <div id="b2" class="orange"></div>
+        <div id="b3" class="orange"></div>
+        <div id="b4" class="orange"></div>
+        <div id="b5" class="orange"></div>
+        <div id="b6" class="orange"></div>
       </div>
       <div id="columnc">
-        <div id="c1"></div>
-        <div id="c2"></div>
-        <div id="c3"></div>
-        <div id="c4"></div>
-        <div id="c5"></div>
-        <div id="c6"></div>
+        <div id="c1" class="yellow"></div>
+        <div id="c2" class="yellow"></div>
+        <div id="c3" class="yellow"></div>
+        <div id="c4" class="yellow"></div>
+        <div id="c5" class="yellow"></div>
+        <div id="c6" class="yellow"></div>
       </div>
       <div id="columnd">
-        <div id="d1"></div>
-        <div id="d2"></div>
-        <div id="d3"></div>
-        <div id="d4"></div>
-        <div id="d5"></div>
-        <div id="d6"></div>
+        <div id="d1" class="green"></div>
+        <div id="d2" class="green"></div>
+        <div id="d3" class="green"></div>
+        <div id="d4" class="green"></div>
+        <div id="d5" class="green"></div>
+        <div id="d6" class="green"></div>
       </div>
       <div id="columne">
-        <div id="e1"></div>
-        <div id="e2"></div>
-        <div id="e3"></div>
-        <div id="e4"></div>
-        <div id="e5"></div>
-        <div id="e6"></div>
+        <div id="e1" class="blue"></div>
+        <div id="e2" class="blue"></div>
+        <div id="e3" class="blue"></div>
+        <div id="e4" class="blue"></div>
+        <div id="e5" class="blue"></div>
+        <div id="e6" class="blue"></div>
       </div>
       <div id="columnf">
-        <div id="f1"></div>
-        <div id="f2"></div>
-        <div id="f3"></div>
-        <div id="f4"></div>
-        <div id="f5"></div>
-        <div id="f6"></div>
+        <div id="f1" class="purple"></div>
+        <div id="f2" class="purple"></div>
+        <div id="f3" class="purple"></div>
+        <div id="f4" class="purple"></div>
+        <div id="f5" class="purple"></div>
+        <div id="f6" class="purple"></div>
       </div>
     </main>
     <footer>
